# ai-agent-sql

./: .env  .gitignore  README.md  data_manager.py  dataset.json  main.py  pyproject.toml  query_system.py  requirements.txt
